# receipts-ai

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
backend/: .firebaserc  .gitignore  OrderHistorySample.csv  README.md  pyproject.toml  receipt_items.csv  receipt_items.json
backend/devtools/: build_taxonomy_embeddings.py  generate_models.py  invalidate_cache_namespace.py  ollama_receipt_extraction.py
backend/docs/: development.md
backend/src/receipts_ai/: __init__.py  automation_rules.py  brave_search.py  budget_categories.py  cache.py  categorization.py  config.py  document_intelligence.py  download_google_drive_folder.py  export_firestore.py  export_firestore_csv.py  firestore_client.py  firestore_transactions.py  ingest_amazon.py  ingest_receipts.py  ingest_statements.py  openai_receipt_extraction.py  receipt_extraction.py  receipts_ai.py  review_cli.py  review_models.py  review_service.py  review_store.py  review_streamlit_app.py  taxonomy.py  transactions.py
backend/src/receipts_ai/models/: __init__.py  budget_categories.json  receipt_data_extraction.py  transaction.py
backend/tests/: conftest.py  test_automation_rules.py  test_brave_search.py  test_budget_categories.py  test_build_taxonomy_embeddings.py  test_cache.py  test_categorization.py  test_config.py  test_document_intelligence.py  test_download_google_drive_folder.py  test_export_firestore.py  test_export_firestore_csv.py  test_ingest_amazon_cli.py  test_ingest_receipts_cli.py  test_ingest_statements_cli.py  test_openai_receipt_extraction.py  test_receipt_extraction.py  test_receipt_review.py  test_receipts_ai_cli.py  test_transaction_model.py  test_transactions_util.py
backend/tests/fixtures/azure/: fred_meyer_receipt.json
backend/user_utility_scripts/: README.md  step_1_download_receipts_and_add_to_review_db.sh  step_2_review_receipts.sh  step_3_ingest_all.sh  step_4_export.sh  utilities.sh
cli/: AGENTS.md  Makefile  README.md  pyproject.toml
cli/devtools/: lint.py
cli/src/receipts_ai_cli/: __init__.py  __main__.py  app.py  taxonomy_selection.py  transaction_helpers.py
cli/src/receipts_ai_cli/screens/: __init__.py  modals.py  rules.py  transaction_review.py  transactions.py
cli/tests/: test_app.py
models/: taxonomy.en-US.txt  transaction.json
ui/tracker_ui/: README.md  pubspec.yaml
ui/tracker_ui/android/: ._gradlew.bat
ui/tracker_ui/ios/: Podfile
ui/tracker_ui/lib/: main.dart
ui/tracker_ui/linux/: CMakeLists.txt
ui/tracker_ui/test/: hello_test.dart
ui/tracker_ui/web/: index.html  manifest.json
ui/tracker_ui/windows/: CMakeLists.txt
(+11 files in other folders)
