# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/reteptilian/receipts-ai"

[project]
name = "receipts-ai-cli"
description = "Textual CLI for Receipts AI"
authors = [
    { name="Peter Esbensen", email="pkesbensen@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]


# ---- Main dependencies ----

dependencies = [
    "receipts-ai",
    "textual>=6.8.0",
]

[tool.uv.sources]
receipts-ai = { path = "../backend", editable = true }


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.1",
    "codespell>=2.4.1",
    "rich>=14.3.2",
    "basedpyright>=1.38.0",
    "funlog>=0.2.1",
]

[project.scripts]
receipts-ai-cli = "receipts_ai_cli.app:main"


# ---- Build system ----

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["src/receipts_ai_cli"]


# ---- Settings ----

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]
ignore = [
    "E501",
    "E402",
    "E731",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
]

[tool.basedpyright]
include = ["src", "tests", "devtools"]
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportUnreachable = false
reportImplicitOverride = false

[tool.codespell]
skip = ".venv,.pytest_cache,.ruff_cache"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "src",
    "tests",
]
norecursedirs = []
filterwarnings = []
